--- a/style/position-page.css
+++ b/style/position-page.css
@@ -1,6 +1,5 @@
 *{
 	margin: 0;
-	box-sizing: border-box;
 } 
 body{
 	background-image: url("../img/outerspace_landscape.jpeg");
@@ -22,7 +21,6 @@ nav{
 	left: 30px;
 }
 .anchor{
-	top: 0px;
 	left: 90px;
 	position: relative;
 }
@@ -44,9 +42,9 @@ nav a:hover {
 	display: inline-block;
 }
 .dot{
+	position: relative;
 	width: 600px;
   	height: 300px;
-  	position: relative;
   	border: 10px dotted green;
   	margin-left: auto;
 	margin-right: auto;
@@ -54,13 +52,13 @@ nav a:hover {
 }
 .cat{
 	position: absolute;
-	top: 100px;
-	left: 340px;
+	top: -90px;
+	left: -90px;
 	width: 210px
 }
 .dog{
 	position: absolute;
-	top: 400px;
-	right: 290px;
+	bottom: -90px;
+	right: -90px;
 	width: 210px;
 }
