--- a/style/design_challenge.css
+++ b/style/design_challenge.css
@@ -27,10 +27,10 @@ input{
 	margin-bottom: 13px;
 	border: 1px solid #cbcbcb;
 	border-radius: 3px;
+	float: right;
 }
-img{
+.img{
 	width: 26px;
-	border:1px solid #cbcbcb;
 }
 .table{
 	border-collapse: collapse;
