--- a/style/design_challenge.css
+++ b/style/design_challenge.css
@@ -8,11 +8,12 @@ nav{
 	position: fixed;
 	background-color: #eeeeee;
 }
-h2{
+p{
 	display: inline-block;
 	font-size: 18px;
+	font-family: "Roboto", sans-serif;
 }
-.left{
+.right{
 	float: right;
 	padding-right: 25px;
 }
@@ -22,15 +23,17 @@ main{
 	padding-left: 90px; 
 }
 input{
-	width: 100%;
-	height: 26px;
+	width: 400px;
+	height: 30px;
 	margin-bottom: 13px;
 	border: 1px solid #cbcbcb;
 	border-radius: 3px;
-	float: right;
 }
-.img{
-	width: 26px;
+.search .ipt, .search .image{
+	display: inline-block;
+}
+.image{
+	width: 30px;
 }
 .table{
 	border-collapse: collapse;
@@ -60,4 +63,6 @@ div p{
 }
 a{
 	font-weight: bold;
+	padding-left: 5px;
+	padding-right: 5px;
 }
